--- a/docs/howtos/analytics/index-analytics.mdx
+++ b/docs/howtos/analytics/index-analytics.mdx
@@ -5,6 +5,9 @@ sidebar_label: Building an Analytics dashboard app using Redis
 slug: /howtos/analytics
 ---
 
+
+An interactive analytics dashboard serve several purposes. They allow you to share data and provide you with all those vital information to make game-changing decisions at a faster pace. Building a real-time dynamic dashboard using a traditional relational database might require a complex set of queries. By using NoSQL database like Redis, you can build a powerful interactive and dynamic dashboard with a small number of Redis commands. 
+
 This tutorial shows a basic analytics dashboard app that uses Redis Bitmap written in NodeJS (JavaScript)
 
 ![analytics](analytics_dashboard.png)
