--- a/docs/howtos/analytics/index-analytics.mdx
+++ b/docs/howtos/analytics/index-analytics.mdx
@@ -270,5 +270,6 @@ Example:
 #### References
 
 - [Complete Source Code](https://github.com/redis-developer/basic-analytics-dashboard-redis-bitmaps-nodejs)
+- [Use caes of Bitmaps](https://redis.io/topics/data-types-intro)
 
 
