--- a/docs/howtos/nlp/index-nlp.mdx
+++ b/docs/howtos/nlp/index-nlp.mdx
@@ -16,7 +16,7 @@ Authors - [Alex Mikhalev](https://www.linkedin.com/in/alexmikhalev/), [Ajeet Sin
 
 ##  Goal
 
-In this tutorial, you will learn how to build a pipeline for Natural Language Processing(NLP) using [RedisGears](https://developer.redislabs.com/howtos/redisgears). For this demonstration, we will be leveraging [the Kaggle CORD19 datasets](https://www.kaggle.com/allen-institute-for-ai/CORD-19-research-challenge). The implementation is designed to avoid running out of memory, leveraging Redis Cluster and RedisGears, where the use of RedisGears allows to process data on storage without the need to move data in and out of the Redis cluster - using Redis Cluster as data fabric. Redis Cluster allows horizontal scalability up to 1000 nodes and together with RedisGears provides a distributed system where data scientist/ML engineers can focus on processing steps without worry about writing tons of scaffoldings for distributed calculations.
+In this tutorial, you will learn how to build a pipeline for  Natural Language Processing(NLP) using [RedisGears](https://developer.redislabs.com/howtos/redisgears). For this demonstration, we will be leveraging the Kaggle CORD19 datasets. The implementation is designed to avoid running out of memory, leveraging Redis Cluster and RedisGears, where the use of RedisGears allows for processing data on storage without the need to move data in and out of the Redis Cluster—using Redis Cluster as data fabric. Redis Cluster allows for horizontal scalability up to 1000 nodes, and together with RedisGears, provides a distributed system where data science/ML engineers can focus on processing steps, without the worry of writing tons of scaffoldings for distributed calculations.
 
 ![nlp](nlparch.png)
 
@@ -25,28 +25,30 @@ This project was built with the aim to make it easier for other people to contri
 
 ## Why data scientists uses RedisGears?
 
-[RedisGears](https://redislabs.com/modules/redis-gears/) have enormous potential, particularly for text processing - you can process your data “on data” without need to move them in and out of memory, summary of the important points:
+[RedisGears](https://redislabs.com/modules/redis-gears/) have enormous potential, particularly for text processing—you can process your data “on data” without needing to move them in and out of memory. Summary of the important points: 
+
 
 - In Memory storage (Horizontally scalable if it’s Redis cluster)
 - Processing of data (on data) without need to move in and out
 - Gears - like Spark on Hadoop, process data intelligently on storage(in-memory) without need to move data in and out
 - Redis in cluster mode with RedisGears and python enabled takes 20 MB RAM. Think how much more data you can shuffle into your laptop or server.
 
+
 ## What is a knowledge graph?
 
-Today, in 2020 we live in the world of new systems that operate not just files and folders, or web pages, but entities with their properties and relationships between them, organized into hierarchies of classes and categories. These systems are used everywhere from military-industrial complex to our everyday lives. Palantir, Primer, and others enable massive intelligence and counter-intelligence projects in military and security forces, Quid and RecordedFuture enable competitive analytics, Bottlenose and others enable online reputation analytics, Microsoft Graph enables new kinds of productivity apps for the enterprises, Google Knowledge Graph and Microsoft’s Satori enable everyday search queries, and together with Amazon Information Graph they power corresponding AI assistants by enabling them to answer questions about the world facts.
+Today, we live in the world of new systems that operate not just files, folders, or web pages, but entities with their properties and relationships between them, organized into hierarchies of classes and categories. These systems are used everywhere from the military-industrial complex to our everyday lives. Palantir, Primer, and other data companies enable massive intelligence and counterintelligence projects in military and security forces, Quid and RecordedFuture enable competitive analytics, Bottlenose and similar enterprises enable online reputation analytics. Microsoft Graph enables new kinds of productivity apps for the enterprises, Google Knowledge Graph and Microsoft’s Satori enable everyday search queries, and together with Amazon Information Graph they power corresponding AI assistants by enabling them to answer questions about the world facts
 
 All these (and many other more specialized) systems are used in different domains, but all of them use Knowledge Graphs as their foundation.
 
-Knowledge graphs are one of the best ways to connect and make sense out of information from different data sources, following the motto of one of the vendors: [“It’s about things not strings”](https://www.poolparty.biz/news-events/knowledge-graphs-connecting-dots-increasingly-complex-world/). 
+Knowledge graphs are one of the best ways to connect and make sense out of information from different data sources, following the motto of one of the vendors— [“It’s about things not strings”](https://www.poolparty.biz/news-events/knowledge-graphs-connecting-dots-increasingly-complex-world/). 
 
-Knowledge Graph consists of thesaurus, taxonomy and ontology. 
-In this pipeline I assume knowledge is captured in medical metathesaurus [UMLS](https://www.nlm.nih.gov/research/umls/index.html) and concepts in text are related if they are part of the same sentence, therefore concept become node, their relationship becomes edge: 
+Knowledge Graph consists of thesaurus, taxonomy and ontology. In this pipeline I assume knowledge is captured in medical metathesaurus [UMLS](https://www.nlm.nih.gov/research/umls/index.html) and concepts in text are related if they are part of the same sentence, therefore concept become node, their relationship becomes edge:
+
 
 ![concepts1](concepts1.png)
 ![concepts2](concepts2.png)
 
-Concepts have CUI (Concept Unique Identifiers) and those will be primary keys in nodes, linked to UMLS thesaurus. For example, if you try to search “How does temperature and humidity affect the transmission of 2019-nCoV?” on a demo website [http://thepattern.digital/](http://thepattern.digital) and move slider to 1996, there is an edge connecting transmission (C5190195) and birth (C5195639) and the part of sentence matched “the rate of transmission to an infant born to” from the report titled “Afebrile Pneumonia in infants”. 
+Concepts have CUI (Concept Unique Identifiers) and those will be primary keys in nodes, linked to UMLS thesaurus. For example, if you search, “How does temperature and humidity affect the transmission of 2019-nCoV?” on the demo website  [http://thepattern.digital/](http://thepattern.digital) and move slider to 1996, there is an edge-connecting transmission (C5190195) and birth (C5195639) and the part of sentence matched, “the rate of transmission to an infant born to,” from the report titled, “Afebrile Pneumonia in infants.”
 
 ![concepts3](concepts3.png)
 
