--- a/docs/explore/redismod/index-redismod.mdx
+++ b/docs/explore/redismod/index-redismod.mdx
@@ -16,13 +16,13 @@ This image is based on the official image of Redis from Docker. By default, the 
 
 ### Modules included in the container
 
-- RediSearch: a full-featured search engine
-- RedisGraph: a graph database
-- RedisTimeSeries: a timeseries database
-- RedisAI: a tensor and deep learning model server
-- RedisJSON: a native JSON data type
-- RedisBloom: native Bloom and Cuckoo Filter data types
-- RedisGears: a dynamic execution framework
+- [RediSearch](https://redislabs.com/modules/redis-search/): a full-featured search engine
+- [RedisGraph](https://redislabs.com/modules/redis-graph/): a graph database
+- [RedisTimeSeries](https://redislabs.com/modules/redis-timeseries/): a timeseries database
+- [RedisAI](https://redislabs.com/modules/redis-ai/): a tensor and deep learning model server
+- [RedisJSON](https://redislabs.com/modules/redis-json/): a native JSON data type
+- [RedisBloom](https://redislabs.com/modules/redis-bloom/): native Bloom and Cuckoo Filter data types
+- [RedisGears](https://redislabs.com/modules/redis-gears/): a dynamic execution framework
 
 
 
@@ -35,7 +35,7 @@ Run the docker version command in a terminal window to make sure that docker is 
   docker version
  ```
 
-It should display Docker Engine Server and Client version successfully
+It should display Docker Engine Server and Client version successfully.
 
 
 ### Step 2. Running Redismod Docker container
@@ -136,6 +136,7 @@ To test drive rest of Redis modules, please visit the links mentioned under "Ref
 ### Further References
 
  - [Redismod GITHUB repository](https://github.com/RedisLabsModules/redismod)
+ - [Connecting to the database using RedisInsight](https://developer.redislabs.com/explore/redisinsight/)
  - [RedisJSON Tutorial](https://developer.redislabs.com/howtos/redisjson)
  - [RedisTimeSeries Tutorial](https://developer.redislabs.com/howtos/redistimeseries)
  - [RedisGraph Tutorial](https://developer.redislabs.com/howtos/redisgraph)
