--- a/docs/explore/redismod/index-redismod.mdx
+++ b/docs/explore/redismod/index-redismod.mdx
@@ -28,7 +28,7 @@ This image is based on the official image of Redis from Docker. By default, the 
 
 ### Step 1. Install Docker
 
-To use RedisMod on a local Mac, the first step is to you need to install Docker for your operating system. 
+To use RedisMod on a local Mac, the first step is to install Docker for your operating system. 
 Run the docker version command in a terminal window to make sure that docker is installed correctly.
 
  ```bash
