--- a/docs/create/heroku/index-heroku.mdx
+++ b/docs/create/heroku/index-heroku.mdx
@@ -26,12 +26,12 @@ Heroku is a cloud Platform as a Service (PaaS) supporting multiple programming l
 
 
 
-## Using Redis Enterprise Cloud directly
+### Using Redis Enterprise Cloud directly
 
 
 You can quickly and easily get your apps up and running with Redis Enterprise Cloud directly. Follow the below steps:
 
-### Step 1. Create Redis Enterprise Cloud
+#### Step 1. Create Redis Enterprise Cloud
 
 Create your free Redis Enterprise Cloud account. [Follow this link to create Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
 
@@ -40,20 +40,20 @@ Create your free Redis Enterprise Cloud account. [Follow this link to create Red
 Save the database endpoint URL and password for future reference.
 
 
-### Step 2. Create a Heroku account
+#### Step 2. Create a Heroku account
 
 If you are using Heroku for the first time, create your new Heroku account [through this link](https://signup.heroku.com/login)
 
 ![heroku](create_heroku.png)
 
 
-### Step 3. Install Heroku CLI on your system
+#### Step 3. Install Heroku CLI on your system
 
    ```macos
     brew install heroku
    ```
 
-### Step 4. Login to Heroku
+#### Step 4. Login to Heroku
 
    ```bash
     heroku login
@@ -63,7 +63,7 @@ If you are using Heroku for the first time, create your new Heroku account [thro
     Logged in as your_email_address
    ```
 
-### Step 5. Connect your application to Redis Enterprise Cloud
+#### Step 5. Connect your application to Redis Enterprise Cloud
 
 For this demonstration, we will be using a [Sample Rate Limiting application](https://github.com/redis-developer/basic-rate-limiting-demo-python)
 
@@ -89,7 +89,7 @@ Run the below CLI to have a functioning Git repository that contains a simple ap
 ![heroku](heroku_app01.png)
 
 
-### Step 6. Setting up Environmental variable
+#### Step 6. Setting up Environmental variable
 
 Go to Heroku dashboard, click "Settings" and set REDIS_ENDPOINT_URI and REDIS_PASSWORD under the Config Vars.
 Refer to Step 1 for the reference.
@@ -98,7 +98,7 @@ Refer to Step 1 for the reference.
 
 
 
-### Step 7. Pushing the code to Git
+#### Step 7. Pushing the code to Git
 
    ```bash
     git push heroku
@@ -127,7 +127,7 @@ Check the logs:
    ```
 
 
-### Step 8. Accessing the app 
+#### Step 8. Accessing the app 
 
 ![heroku](ratelimiting.png)
 
@@ -137,7 +137,7 @@ Check the logs:
 
 <TabItem value="CLI">
 
-## Using Heroku CLI
+### Using Heroku CLI
 
 :::important
 Please note that this method won't allow you to choose Redis Modules while creating Redis database. Also, it doesn't provide you with the flexibility to choose Cloud platform of your choice. It is recommended to use Redis Enterprise Cloud directly. [Click here to learn more](/create/rediscloud).
@@ -146,7 +146,7 @@ Please note that this method won't allow you to choose Redis Modules while creat
 
 Under this section, we will be creating Heroku account, use Heroku CLI to login and add Redis Enterprise Cloud as an add-on.
 
-### Step 1: Install Heroku 
+#### Step 1: Install Heroku 
 
 
    ```bash
@@ -166,14 +166,14 @@ Assuming that you already have Heroku account created, run the below command to 
 
 
 
-### Step 2: Cloning the application
+#### Step 2: Cloning the application
 
    ```bash
     $ git clone https://github.com/redis-developer/basic-redis-rate-limiting-demo-nodejs
    ```
 
 
-### Step 3. Create a heroku app
+#### Step 3. Create a heroku app
 
 
    ```
@@ -183,7 +183,7 @@ Assuming that you already have Heroku account created, run the below command to 
   ```
 
 
-### Step 4. Start by installing the add-on:
+#### Step 4. Start by installing the add-on:
 
 Ensure that you don’t have existing add-ons added in your account.
 
@@ -225,7 +225,7 @@ Once Redis Cloud has been added, you will notice a REDISCLOUD_URL config vars in
 
 
 
-### Step 5. Accessing the Redis Enterprise Cloud dashboard
+#### Step 5. Accessing the Redis Enterprise Cloud dashboard
 
 Go to Heroku and click on “Installed add-ons”
 
@@ -237,7 +237,7 @@ Click on “Redis Enterprise Cloud” and it will be redirected over Redis Enter
 
 
 
-### Step 6. Pushing the code to Heroku
+#### Step 6. Pushing the code to Heroku
 
   ```bash
    $ git push heroku
@@ -252,7 +252,7 @@ Click on “Redis Enterprise Cloud” and it will be redirected over Redis Enter
    * [new branch]      master -> master
   ```
 
-### Step 7. Accessing the app
+#### Step 7. Accessing the app
 
 Open https://lit-island-48230.herokuapp.com/ and access the rate limiting app.
 
@@ -267,26 +267,26 @@ Open https://lit-island-48230.herokuapp.com/ and access the rate limiting app.
 
 <TabItem value="dashboardui">
 
-## Using Heroku Dashboard
+### Using Heroku Dashboard
 
 :::important
 Please note that this method won't allow you to choose Redis Modules while creating Redis database. Also, it doesn't provide you with the flexibility to choose Cloud platform of your choice. It is recommended to use Redis Enterprise Cloud directly. [Click here to learn more](/create/rediscloud).
 :::
 
-### Step 1: Sign up for a Heroku account
+#### Step 1: Sign up for a Heroku account
 
 Create a heroku account and sign-in to the dashboard
 
 ![heroku](create_heroku.png)
 
-### Step 2. Create a new Heroku app
+#### Step 2. Create a new Heroku app
 
 Create a new app called "redislabs"
 
 ![heroku](heroku_appname.png)
 
 
-### Step 3. Choose GitHub
+#### Step 3. Choose GitHub
 
 Select "Github" as a deployment method
 
@@ -294,21 +294,21 @@ Select "Github" as a deployment method
 ![heroku](heroku_selectgit.png)
 
 
-### Step 4. Connect to GitHub
+#### Step 4. Connect to GitHub
 
 ![heroku](heroku_gitconnect.png)
 
-### Step 5. Install Redis Enteprise Cloud as an add-on
+#### Step 5. Install Redis Enteprise Cloud as an add-on
 
 
 ![heroku](heroku_recloudinstall1.png)
 
-### Step 6. Fill up order online form
+#### Step 6. Fill up order online form
 
 ![heroku](heroku_orderform.png)
 
 
-### Step 7. Deploy the app
+#### Step 7. Deploy the app
 
 Before deploying the app, modify the environmental variables as per your application:
 
@@ -324,14 +324,14 @@ Click "Open App" on the top right corner.
 
 ![heroku](heroku_access2.png)
 
-### Step 8. Accessing the app 
+#### Step 8. Accessing the app 
 
 ![heroku](heroku_finalratelimit.png)
 
  </TabItem>
 </Tabs>
 
-## Next Steps
+### Next Steps
 
 - [How to build Java based Rate Limiting application on Heroku using Redis](/howtos/herokujava)
 - [How to build NodeJS based Rate Limiting application on Heroku using Redis](/howtos/herokunodejs)
