--- a/docs/develop/java/index-java.mdx
+++ b/docs/develop/java/index-java.mdx
@@ -27,7 +27,7 @@ The blog post “[Jedis vs. Lettuce: An Exploration](https://redislabs.com/blog/
   ]}>
   <TabItem value="jedis">
 
-
+## Using Jedis
 
 ### Step 1. Add dependencies Jedis dependency to your Maven (or Gradle) project file:
 
@@ -90,6 +90,7 @@ Find more information about Java & Redis connections in the "[Redis Connect](htt
   </TabItem>
   <TabItem value="lettuce">
 
+## Using Lettuce
 
 ### Step 1. Add dependencies Jedis dependency to your Maven (or Gradle) project file:
 
