--- a/docs/howtos/redisgraph/index-redisgraph.mdx
+++ b/docs/howtos/redisgraph/index-redisgraph.mdx
@@ -161,7 +161,7 @@ Now that you have data in your graph, you’re ready to ask some questions, such
 3) 1) "Query internal execution time: 0.641200 milliseconds"
 ```
 
-#### Visualizing graph databases with RedisInsight
+#### Visualizing graph databases using RedisInsight
 
 If you are using RedisInsight, you can visualize and navigate into the nodes and relationships graphically.
 Click on the RedisGraph menu entry on the left and enter the query:
