--- a/docs/howtos/redisbloom/index-redisbloom.mdx
+++ b/docs/howtos/redisbloom/index-redisbloom.mdx
@@ -111,3 +111,4 @@ In the above example, the first command shows the result as “1” for both the
 ### Next Step 
 
 - Learn more about RedisBloom in the [Quick Start](https://oss.redislabs.com/redisbloom/Quick_Start/) tutorial.
+- [How to build a Fraud Detection System using RedisGears and RedisBloom](https://developer.redislabs.com/howtos/frauddetection/)
