--- a/docs/howtos/redisbloom/index-redisbloom.mdx
+++ b/docs/howtos/redisbloom/index-redisbloom.mdx
@@ -112,3 +112,5 @@ In the above example, the first command shows the result as “1” for both the
 
 - Learn more about RedisBloom in the [Quick Start](https://oss.redislabs.com/redisbloom/Quick_Start/) tutorial.
 - [How to build a Fraud Detection System using RedisGears and RedisBloom](https://developer.redislabs.com/howtos/frauddetection/)
+- [How to Use Redis for Content Filtering](https://redislabs.com/blog/use-redis-content-filtering/)
+- [Benefits of RedisBloom](https://redislabs.com/modules/redis-bloom/)
