--- a/docs/howtos/analytics/index-analytics.mdx
+++ b/docs/howtos/analytics/index-analytics.mdx
@@ -267,7 +267,7 @@ Example:
 - Customer Retention (customers who bought on the different dates): SMEMBERS rab:set:custom:retention-buy:timeSpan:anytime
 
 
-#### References
+### References
 
 - [Complete Source Code](https://github.com/redis-developer/basic-analytics-dashboard-redis-bitmaps-nodejs)
 - [Use cases of Bitmaps](https://redis.io/topics/data-types-intro)
