--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -94,6 +94,17 @@ The following links provides you with the available options to create a new Redi
         />   
   </div>
 
+
+   <div class="col">
+    <RedisCard
+        title="Redis using Homebrew"
+        description="Create Redis database using Homebrew"
+        page="/create/homebrew"
+        />
+  </div>
+
+
+
 </div>
 
 
