--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -97,8 +97,8 @@ The following links provides you with the available options to create a new Redi
 
    <div class="col">
     <RedisCard
-        title="Redis using Homebrew"
-        description="Create Redis database using Homebrew"
+        title="Redis on Mac"
+        description="Create Redis database on Mac using Homebrew"
         page="/create/homebrew"
         />
   </div>
