--- a/docs/create/windows/index-windows.mdx
+++ b/docs/create/windows/index-windows.mdx
@@ -47,7 +47,7 @@ The following example works with Ubuntu (you’ll need to wait for initializatio
   sudo service redis-server restart
  ````
 
-### Step 5: Verify your Redis server is running and available
+### Step 5: Verify your Redis server is running
 
  ```
   $ redis-cli 
