--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -30,14 +30,14 @@ For your first steps with Node.js and Redis, this article will show how to use t
     <TabItem value="ioredis"> 
 
 
-### Step 1. Install the ioredis library using `npm` (or `yarn`)
+#### Step 1. Install the ioredis library using `npm` (or `yarn`)
 
   ```bash
    npm install ioredis
   ```
 
 
-### Step 2. Write your application code
+#### Step 2. Write your application code
 
    ```javascript
     const Redis = require("ioredis");
@@ -66,14 +66,14 @@ Find more information about Redis & io-redis connections in the "[Redis Connect]
   <TabItem value="node_redis">
 
 
-### Step 1. Install the Redis library using `npm` (or `yarn`)
+#### Step 1. Install the Redis library using `npm` (or `yarn`)
 
   ```bash
     npm install redis
   ```
 
 
-### Step 2. Write your application code
+#### Step 2. Write your application code
 
   ```javascript
     const redis = require("redis");
@@ -113,7 +113,7 @@ Find more information about Redis & node-redis connections in the "[Redis Connec
 
 ---
 
-### More developer resources
+### More Developer Resources
 
 <div class="row">
 
