--- a/docs/create/heroku/index-heroku.mdx
+++ b/docs/create/heroku/index-heroku.mdx
@@ -137,7 +137,7 @@ Check the logs:
 
 <TabItem value="CLI">
 
-### Using Heroku CLI
+#### Using Heroku CLI
 
 :::important
 Please note that this method won't allow you to choose Redis Modules while creating Redis database. Also, it doesn't provide you with the flexibility to choose Cloud platform of your choice. It is recommended to use Redis Enterprise Cloud directly. [Click here to learn more](/create/rediscloud).
@@ -267,7 +267,7 @@ Open https://lit-island-48230.herokuapp.com/ and access the rate limiting app.
 
 <TabItem value="dashboardui">
 
-### Using Heroku Dashboard
+#### Using Heroku Dashboard
 
 :::important
 Please note that this method won't allow you to choose Redis Modules while creating Redis database. Also, it doesn't provide you with the flexibility to choose Cloud platform of your choice. It is recommended to use Redis Enterprise Cloud directly. [Click here to learn more](/create/rediscloud).
