--- a/docs/create/windows/index-windows.mdx
+++ b/docs/create/windows/index-windows.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-windows
 title: Create Redis database on Microsoft Windows 10 
-sidebar_label: Redis on Windows 10
+sidebar_label: Redis on Windows
 slug: /create/windows
 ---
 
@@ -70,9 +70,6 @@ Please note: By default, Redis has 0-15 indexes for databases, you can change th
 
 - [Windows 8.1 for Redis ](https://redislabs.com/blog/redis-on-windows-8-1-and-previous-versions/)
 - [Redis on Windows 10 - Video](https://www.youtube.com/watch?v=1psWME8UH_0)
-- [Running Redis on Windows 10 – Part I of III](https://redislabs.com/blog/redis-on-windows-10/)
-
-
 
 
 
