--- a/docs/howtos/redistimeseries/index-redistimeseries.mdx
+++ b/docs/howtos/redistimeseries/index-redistimeseries.mdx
@@ -150,5 +150,5 @@ You can use various aggregation types such as  avg, sum, min, max, range, count,
 - Learn more about RedisTimeSeries in the [Quickstart](https://oss.redislabs.com/redistimeseries/) tutorial.
 - [Build Your Financial Application on RedisTimeSeries](https://redislabs.com/blog/build-your-financial-application-on-redistimeseries/)
 - [How to Manage Real-Time IoT Sensor Data in Redis](https://redislabs.com/blog/how-to-manage-real-time-iot-sensor-data-in-redis/)
-- [Introduction to RedisTimeSeries](https://www.youtube.com/watch?v=rXynFOrrd-Q)
+- [Introduction to RedisTimeSeries - Video](https://www.youtube.com/watch?v=rXynFOrrd-Q)
 
