--- a/docs/create/windows/index-windows.mdx
+++ b/docs/create/windows/index-windows.mdx
@@ -68,7 +68,9 @@ Please note: By default, Redis has 0-15 indexes for databases, you can change th
 
 ### References
 
-- [Windows 8.1 for Redis ](https://redislabs.com/blog/redis-on-windows-8-1-and-previous-versions/)
+- [Redis Enterprise For Windows](https://redislabs.com/lp/redis-windows/)
+- [List of .Net Clients](https://redis.io/clients#c)
+- [Redis client for .NET languages](https://github.com/StackExchange/StackExchange.Redis)
 - [Redis on Windows 10 - Video](https://www.youtube.com/watch?v=1psWME8UH_0)
 
 
