--- a/docs/create/windows/index-windows.mdx
+++ b/docs/create/windows/index-windows.mdx
@@ -23,7 +23,7 @@ In Windows 10, Microsoft replaces Command Prompt with PowerShell as the default 
 
 Reboot Windows after making the change—note that you only need to do this one time.
 
-### Step 2: Launch Microsoft Windows Store to download Ubuntu distribution 
+### Step 2: Launch Microsoft Windows Store 
 
  ```powershell
   start ms-windows-store:
