--- a/docs/create/windows/index-windows.mdx
+++ b/docs/create/windows/index-windows.mdx
@@ -73,5 +73,12 @@ Please note: By default, Redis has 0-15 indexes for databases, you can change th
 - [Redis client for .NET languages](https://github.com/StackExchange/StackExchange.Redis)
 - [Redis on Windows 10 - Video](https://www.youtube.com/watch?v=1psWME8UH_0)
 
+### Redis University
+
+Check out this video if you want to see Redis on Windows 10 Home Edition in action.
+
+<div class="text--center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/qTN0GqF_Gq8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 
