--- a/docs/howtos/popupstore/index-popupstore.mdx
+++ b/docs/howtos/popupstore/index-popupstore.mdx
@@ -5,8 +5,11 @@ sidebar_label: Building a Popup Store application using Redis
 slug: /howtos/popupstore
 ---
 
+Pop-up stores are becoming a popular channel for retailers to create a new revenue stream, generate buzz with customers, test product concepts, or unload excess inventory. Since the idea is to spin up the store quickly and then close it shortly thereafter, it doesn’t make sense to spend a lot of time on development. With the right Redis modules, you can create a robust customer experience without a lot of development effort.
 
-The Pop-up store app uses [Redis Streams](https://redis.io/topics/streams-intro), [RedisTimeSeries](https://oss.redislabs.com/redistimeseries/), [RedisGears](https://oss.redislabs.com/redisgears/) and Grafana with [Redis Datasource](https://github.com/RedisTimeSeries/grafana-redis-datasource) to visualize sale progress.
+This pop-up store demo illustrates a company that sells a single product and has 10,000 units available for purchase. Each customer can purchase one unit and the sale lasts only 10 minutes, so order processing must be instantaneous. The demo shows how to visualize data pipeline in real-time using [Redis Streams](https://redis.io/topics/streams-intro), [RedisTimeSeries](https://developer.redislabs.com/howtos/redistimeseries), [RedisGears](https://developer.redislabs.com/howtos/redisgears) and [Redis Datasource with Grafana](https://developer.redislabs.com/explore/redisdatasource).
+
+
 
 ![Pop-up](popupstore.gif)
 
