--- a/docs/howtos/index-howtos.mdx
+++ b/docs/howtos/index-howtos.mdx
@@ -173,7 +173,7 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
 
  <div class="col">
     <RedisCard
-        title="RedisBloom"
+        title="RedisBloom Tutorial"
         description="Getting Started with RedisBloom"
         page="/howtos/redisbloom"
         />
@@ -182,7 +182,7 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
 
 <div class="col">
     <RedisCard
-        title="RedisGears"
+        title="RedisGears Tutorial"
         description="Getting Started with RedisGears"
         page="/howtos/redisgears"
         />
