--- a/docs/explore/redisinsight/cluster/index-cluster.mdx
+++ b/docs/explore/redisinsight/cluster/index-cluster.mdx
@@ -14,11 +14,20 @@ A full-featured desktop GUI client, RedisInsight is an essential tool for Redis 
 
 ## Getting Started 
 
-Redis Cluster is an active-passive cluster implementation that consists of master and slave nodes. There are two kinds of nodes: master and slave nodes. To get started with Redis Cluster, follow the below steps to build 3 Master and 3 Replicas. Please Note: In redis, slave nodes are generally called replicas as they hold the replicated slots that their masters have.
+Redis Cluster is an active-passive cluster implementation that consists of master and slave nodes. 
+There are two kinds of nodes: master and slave nodes. To get started with Redis Cluster, follow the below steps to build 3 Master and 3 Replicas.
+
+
+:::important
+
+Please Note: In redis, slave nodes are generally called replicas as they hold the replicated slots that their masters have.
+
+:::
+
  
 ## Step 1. Install Redis from source
 
-[Follow this link](https://developer.redislabs.com/create/from-source/) to build Redis from source on your local system.
+[Follow this link](/create/from-source/) to build Redis from source in your local system.
 
 ## Step 2: Executing the create-cluster script 
 
