--- a/docs/explore/redisinsight/browser/index-browser.mdx
+++ b/docs/explore/redisinsight/browser/index-browser.mdx
@@ -216,4 +216,6 @@ Delete Key:
 
 ## Further References
 
-
+- [Slowlog Configuration using RedisInsight](/explore/redisinsight/slowlog)
+- [Explore Redis keys using RedisInsight browser tool](/explore/redisinsight/browser)
+- [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
