--- a/docs/explore/redisinsight/cluster/index-cluster.mdx
+++ b/docs/explore/redisinsight/cluster/index-cluster.mdx
@@ -421,5 +421,8 @@ Also, RedisInsight Cluster Management tool allows you to rebalance your cluster 
 ![cluster](cluster32.png)
 ![cluster](cluster33.png)
 
-## Further References
+## Addition Links
 
+- [Slowlog Configuration using RedisInsight](/explore/redisinsight/slowlog)
+- [Explore Redis keys using RedisInsight browser tool](/explore/redisinsight/browser)
+- [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
