--- a/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
@@ -501,3 +501,7 @@ You can see the output displayed at the top of the screen. If it says “OK,” 
 
 ### Further References
 
+- [Slowlog Configuration using RedisInsight](/explore/redisinsight/slowlog)
+- [Explore Redis keys using RedisInsight browser tool](/explore/redisinsight/browser)
+- [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
+
