--- a/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
+++ b/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
@@ -232,7 +232,11 @@ You can check memory usage by key:
 
 
 
+## Additional Links
 
+- [Slowlog Configuration using RedisInsight](/explore/redisinsight/slowlog)
+- [Explore Redis keys using RedisInsight browser tool](/explore/redisinsight/browser)
+- [Cluster Management with ease using RedisInsight](/explore/redisinsight/cluster)
 
 
 
