--- a/docs/explore/redisinsight/streams/index-streams.mdx
+++ b/docs/explore/redisinsight/streams/index-streams.mdx
@@ -30,7 +30,7 @@ Let’s dive under the covers and see [Redis Streams](https://redis.io/topics/st
 
 
 -   [Install OpenJDK](https://openjdk.java.net/install/)
--   [Install maven](https://maven.apache.org/install.html)
+-   [Install Apache Maven](https://maven.apache.org/install.html)
 -   [Install Redis](https://developer.redislabs.com/create)
 
 ## Step 1. Cloning the repository
@@ -135,6 +135,10 @@ RedisInsight also provide you to select fields as shown under “View Columns”
 ![alt_text](images/image19.png "image_tooltip")
 
 
-## Further References
+## Additional Links
+
+- [Slowlog Configuration using RedisInsight](/explore/redisinsight/slowlog)
+- [Explore Redis keys using RedisInsight browser tool](/explore/redisinsight/browser)
+- [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
 
 
