--- a/docs/explore/redisinsight/slowlog/index-slowlog.mdx
+++ b/docs/explore/redisinsight/slowlog/index-slowlog.mdx
@@ -15,9 +15,7 @@ RedisInsight, a free GUI for Redis, allows you to identify and troubleshoot bott
 
 Redis Slow Log is highly effective at showing the actual processing time of each slow command. The Redis slowlog is a log of all commands which exceed a specified run time. Please note that the network latency is not included in the measurement, just the time taken to actually execute the command. Redis Slow Log is a list of slow operations for your Redis instance.
 
-
-
-## Getting Started 
+Follow the below steps to see how Slowlog is leveraged to troubleshoot performance issues.
 
 ## Step 1. Create a Redis database
 
