--- a/docs/explore/redisinsight/slowlog/index-slowlog.mdx
+++ b/docs/explore/redisinsight/slowlog/index-slowlog.mdx
@@ -59,7 +59,7 @@ Slowlog will log the last X amount queries which took more time than Y microseco
 ![alt_text](images/image3.png "image_tooltip")
 
 
-## Step 6. Prepare a script to simulate the slowlog
+## Step 6. Prepare a script to add large dataset to Redis database
 
 To see slowlog in action, let us pick up a large dataset. Create a file called importcities.py and add the below content:
 
