Fixed the formatting

--- a/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
+++ b/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
@@ -126,6 +126,12 @@ Click “Proceed”.
 ![alt_text](images/image6.png "image_tooltip")
 
 
+:::important
+
+If you are using online memory analysis, you will want to have enough space to store the RDB file for your Redis database. This is usually 10-50% of the Redis instance’s memory usage.
+
+:::
+
 ## Keyspace Summary
 
 Keyspace Summary identifies the top key patterns from the set of keys in descending order of memory. This helps you identify which key patterns are consuming most of your memory and what are the top keys for that pattern. You can add your own key patterns in order to identify their memory usage and the top keys for that key pattern.
