--- a/docs/explore/redisinsight/browser/index-browser.mdx
+++ b/docs/explore/redisinsight/browser/index-browser.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-browser
-title: Browser Tool using RedisInsight
-sidebar_label: Browser Tool
+title: Visualize Redis database keys using RedisInsight
+sidebar_label: Visualize Redis database keys
 slug: /explore/redisinsight/browser
 ---
 
