--- a/docs/explore/redisinsight/cluster/index-cluster.mdx
+++ b/docs/explore/redisinsight/cluster/index-cluster.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-cluster
-title: Cluster Management using RedisInsight
-sidebar_label: Cluster Management
+title: Manage Your Redis Cluster using RedisInsight GUI
+sidebar_label: Manage Your Redis Cluster 
 slug: /explore/redisinsight/cluster
 ---
 
