--- a/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
+++ b/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-memoryanalyzer
-title: Memory Analysis using RedisInsight
-sidebar_label: Memory Analysis
+title: Reduce Redis Memory usage using Memory Analyzer
+sidebar_label: Reduce Redis Memory usage with Memory Analyzer
 slug: /explore/redisinsight/memoryanalyzer
 ---
 
