--- a/docs/explore/redisinsight/slowlog/index-slowlog.mdx
+++ b/docs/explore/redisinsight/slowlog/index-slowlog.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-slowlog
-title: Slowlog Configuration using RedisInsight
-sidebar_label: Slowlog Configuration
+title: Debuggin and Tracing Redis using Slowlog Configuration
+sidebar_label: Debugging Redis using Slowlog
 slug: /explore/redisinsight/slowlog
 ---
 
