--- a/docs/explore/redisinsight/browser/index-browser.mdx
+++ b/docs/explore/redisinsight/browser/index-browser.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-browser
-title: Visualize Redis database keys using RedisInsight
-sidebar_label: Visualize Redis database keys
+title: Visualize Redis database keys using RedisInsight Browser Tool
+sidebar_label: Visualize Redis database keys 
 slug: /explore/redisinsight/browser
 ---
 
