--- a/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
+++ b/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-memoryanalyzer
 title: Reduce Redis Memory usage using Memory Analyzer
-sidebar_label: Reduce Redis Memory usage with Memory Analyzer
+sidebar_label: Reduce Redis Memory usage with RedisInsight Memory Analyzer Tool
 slug: /explore/redisinsight/memoryanalyzer
 ---
 
