--- a/docs/explore/redisinsight/slowlog/index-slowlog.mdx
+++ b/docs/explore/redisinsight/slowlog/index-slowlog.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-slowlog
-title: Debugging Redis using RedisInsight Slowlog Configuration
+title: Debugging Redis using RedisInsight Slowlog Tool 
 sidebar_label: Debugging Redis using Slowlog
 slug: /explore/redisinsight/slowlog
 ---
