--- a/docs/explore/redisinsight/cluster/index-cluster.mdx
+++ b/docs/explore/redisinsight/cluster/index-cluster.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-cluster
-title: Manage Your Redis Cluster using RedisInsight GUI
+title: Manage Your Redis Cluster using RedisInsight Cluster Management Tool
 sidebar_label: Manage Your Redis Cluster 
 slug: /explore/redisinsight/cluster
 ---
