--- a/docs/explore/redisinsight/cluster/index-cluster.mdx
+++ b/docs/explore/redisinsight/cluster/index-cluster.mdx
@@ -20,7 +20,7 @@ There are two kinds of nodes: master and slave nodes. To get started with Redis 
 
 :::important
 
-Please Note: In redis, slave nodes are generally called replicas as they hold the replicated slots that their masters have.
+Please Note: In Redis, slave nodes are generally called replicas as they hold the replicated slots that their masters have.
 
 :::
 
@@ -297,7 +297,7 @@ In a Redis cluster, there are 16,384 slots available. The first master node in a
 
 ## Step 15. Adding a New Node
 
-Let us add a new node by using the below redis.conf file:
+Let us add a new node in the Redis configuration file:
 
 
  ```bash
